--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp==3.9.5
 aiosignal==1.3.1
 annotated-types==0.7.0
+anyio==4.4.0
 asttokens==2.4.1
 async-timeout==4.0.3
 attrs==23.2.0
@@ -14,8 +15,10 @@ datasets==2.20.0
 decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.8
+distro==1.9.0
 docopt==0.6.2
 environs==9.5.0
+exceptiongroup==1.2.2
 executing==2.0.1
 fastjsonschema==2.20.0
 filelock==3.15.4
@@ -23,6 +26,9 @@ frozenlist==1.4.1
 fsspec==2024.5.0
 greenlet==3.0.3
 grpcio==1.63.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
 huggingface-hub==0.23.4
 idna==3.7
 ipython==8.12.3
@@ -67,6 +73,7 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.5.82
 nvidia-nvtx-cu12==12.1.105
+openai==1.35.13
 orjson==3.10.6
 packaging==24.1
 pandas==2.2.2
@@ -104,6 +111,7 @@ scipy==1.14.0
 sentence-transformers==3.0.1
 sentencepiece==0.2.0
 six==1.16.0
+sniffio==1.3.1
 soupsieve==2.5
 SQLAlchemy==2.0.31
 stack-data==0.6.3
