change from langchain to llama_index, changing model for embedding java code in codebert

--- a/.gitignore
+++ b/.gitignore
@@ -39849,3 +39849,11 @@ venv/
 licenses.md
 
 often_used_commands.md
+codebert_model/
+chavinlo/
+all-Mini*/
+distilgpt2/
+openlm-research/
+gpt2/
+LLaMA-3-8B/
+all-mpnet-base-v2/
