--- a/requirements.txt
+++ b/requirements.txt
@@ -10,14 +10,18 @@ beautifulsoup4==4.12.3
 bleach==6.1.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
+click==8.1.7
 dataclasses-json==0.6.7
 datasets==2.20.0
 decorator==5.1.1
 defusedxml==0.7.1
+Deprecated==1.2.14
 dill==0.3.8
+dirtyjson==1.0.8
 distro==1.9.0
 docopt==0.6.2
 environs==9.5.0
+et-xmlfile==1.1.0
 exceptiongroup==1.2.2
 executing==2.0.1
 fastjsonschema==2.20.0
@@ -34,6 +38,7 @@ idna==3.7
 ipython==8.12.3
 jedi==0.19.1
 Jinja2==3.1.4
+jiter==0.5.0
 joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -47,10 +52,29 @@ langchain-community==0.2.7
 langchain-core==0.2.17
 langchain-text-splitters==0.2.2
 langsmith==0.1.83
+llama-cloud==0.0.13
+llama-index==0.10.65
+llama-index-agent-openai==0.2.9
+llama-index-cli==0.1.13
+llama-index-core==0.10.66
+llama-index-embeddings-huggingface==0.2.3
+llama-index-embeddings-openai==0.1.11
+llama-index-indices-managed-llama-cloud==0.2.7
+llama-index-legacy==0.9.48.post2
+llama-index-llms-openai==0.1.29
+llama-index-multi-modal-llms-openai==0.1.9
+llama-index-program-openai==0.1.7
+llama-index-question-gen-openai==0.1.3
+llama-index-readers-file==0.1.33
+llama-index-readers-llama-parse==0.1.6
+llama-parse==0.4.9
+lxml==5.2.2
+markdown2==2.5.0
 MarkupSafe==2.1.5
 marshmallow==3.21.3
 matplotlib-inline==0.1.7
 milvus-lite==2.4.8
+minijinja==2.0.1
 mistune==3.0.2
 mpmath==1.3.0
 multidict==6.0.5
@@ -59,7 +83,9 @@ mypy-extensions==1.0.0
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
+nest-asyncio==1.6.0
 networkx==3.3
+nltk==3.9
 numpy==1.26.4
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
@@ -73,7 +99,8 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.5.82
 nvidia-nvtx-cu12==12.1.105
-openai==1.35.13
+openai==1.41.0
+openpyxl==3.1.5
 orjson==3.10.6
 packaging==24.1
 pandas==2.2.2
@@ -82,8 +109,10 @@ parso==0.8.4
 pexpect==4.9.0
 pickleshare==0.7.5
 pillow==10.4.0
+pip-licenses==4.5.1
 pipreqs==0.5.0
 platformdirs==4.2.2
+prettytable==3.10.2
 prompt_toolkit==3.0.47
 protobuf==5.27.2
 ptyprocess==0.7.0
@@ -96,7 +125,9 @@ Pygments==2.18.0
 pymilvus==2.4.4
 PyMuPDF==1.24.7
 PyMuPDFb==1.24.6
+pypdf==4.3.1
 python-dateutil==2.9.0.post0
+python-docx==1.1.2
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
@@ -115,11 +146,15 @@ sniffio==1.3.1
 soupsieve==2.5
 SQLAlchemy==2.0.31
 stack-data==0.6.3
+striprtf==0.0.26
 sympy==1.12.1
 tenacity==8.5.0
 threadpoolctl==3.5.0
+tiktoken==0.7.0
 tinycss2==1.3.0
+tkhtmlview==0.3.1
 tokenizers==0.19.1
+tomli==2.0.1
 torch==2.3.1
 tornado==6.4.1
 tqdm==4.66.4
@@ -133,6 +168,7 @@ ujson==5.10.0
 urllib3==2.2.2
 wcwidth==0.2.13
 webencodings==0.5.1
+wrapt==1.16.0
 xxhash==3.4.1
 yarg==0.1.9
 yarl==1.9.4
